[tool.poetry]
name = "rasa_playground"
version = "0.1.0"
description = ""
authors = ["Himanshu <himanshuteotia7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
rasa-core = "^0.14.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"